--- a/index.html
+++ b/index.html
@@ -1,1 +1,132 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>John Barbosa-Neto - Resume</title>
+    <link rel="stylesheet" href="styles.css" />
+    <script
+      src="https://kit.fontawesome.com/a076d05399.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+
+  <body>
+    <div class="container">
+      <header>
+        <h1>John Barbosa-Neto</h1>
+        <p>
+          Experienced Software Engineer specializing in industrial automation,
+          IoT systems, and scalable software development.
+        </p>
+      </header>
+
+      <div class="content">
+        <main class="experience">
+          <section class="section">
+            <h2>Experience</h2>
+
+            <div class="job">
+              <h3>Software Engineer - Kepware Technologies (PTC)</h3>
+              <p>
+                <strong>Portland, ME | 2015 – Present</strong>
+              </p>
+              <ul>
+                <li>
+                  Provided support and troubleshooting to end users of
+                  KEPServerEX and ClientAce.
+                </li>
+                <li>
+                  Developed patches containing bug fixes and enhancements for
+                  KEPServerEX and its drivers in C++.
+                </li>
+                <li>
+                  Designed and developed a communications driver for injection
+                  molding machines that support the EUROMAP 63 protocol.
+                </li>
+                <li>
+                  Spearheaded the design, development, and testing of an OPC UA
+                  Gateway that extends functionality of KEPServerEX’s current
+                  OPC UA product offerings.
+                </li>
+              </ul>
+            </div>
+
+            <div class="job">
+              <h3>Web Developer - Woodard & Curran</h3>
+              <p><strong>Portland, ME | 2015</strong></p>
+              <ul>
+                <li>
+                  Maintained and improved internal tools, SharePoint modules,
+                  and SQL Server databases used by project managers and
+                  engineers.
+                </li>
+                <li>
+                  Developed compliance tracking tools using C# with DevExpress
+                  and Entity Framework.
+                </li>
+              </ul>
+            </div>
+          </section>
+        </main>
+
+        <aside class="sidebar">
+          <section class="contact-info">
+            <h2>Contact</h2>
+            <p>
+              <i class="fas fa-map-marker-alt"></i>
+              South Portland, ME
+            </p>
+            <p>
+              <i class="fas fa-phone"></i>
+              (207) 577-5802
+            </p>
+            <p>
+              <i class="fas fa-envelope"></i>
+              <a href="mailto:jdmbarbosaneto@gmail.com">Email Me</a>
+            </p>
+            <p>
+              <i class="fab fa-linkedin"></i>
+              <a href="#">LinkedIn</a>
+            </p>
+            <p>
+              <i class="fab fa-github"></i>
+              <a href="#">GitHub</a>
+            </p>
+          </section>
+
+          <section class="skills">
+            <h2>Skills</h2>
+            <div class="skill-category">
+              <h3>Programming</h3>
+              <span class="skill">C++</span>
+              <span class="skill">C#</span>
+              <span class="skill">Python</span>
+              <span class="skill">Java</span>
+            </div>
+            <div class="skill-category">
+              <h3>Tools & DevOps</h3>
+              <span class="skill">Docker</span>
+              <span class="skill">Git</span>
+              <span class="skill">Jenkins</span>
+              <span class="skill">SQL Server</span>
+            </div>
+            <div class="skill-category">
+              <h3>Networking & Security</h3>
+              <span class="skill">Wireshark</span>
+              <span class="skill">WinDbg</span>
+              <span class="skill">SSL/TLS</span>
+              <span class="skill">REST API</span>
+            </div>
+          </section>
+
+          <section class="education">
+            <h2>Education</h2>
+            <p><strong>B.S. in Computer Science</strong></p>
+            <p>University of Southern Maine</p>
+          </section>
+        </aside>
+      </div>
+    </div>
+  </body>
+</html>
