--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container">
       <header>
-        <h1>John Barbosa-Neto</h1>
+        <h1>João Barbosa Neto</h1>
         <p>
           Experienced Software Engineer specializing in industrial automation,
           IoT systems, and scalable software development.
