--- a/index.html
+++ b/index.html
@@ -3,58 +3,230 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>John Barbosa-Neto - Resume</title>
-    <link rel="stylesheet" href="styles.css" />
-    <script
-      src="https://kit.fontawesome.com/a076d05399.js"
-      crossorigin="anonymous"
-    ></script>
+    <title>João Barbosa Neto - Resume</title>
+
+    <style>
+      @import url('https://use.fontawesome.com/releases/v5.6.1/css/all.css');
+      @import url('https://fonts.googleapis.com/css?family=Poppins');
+
+      body {
+        font-family: 'Poppins', sans-serif;
+        font-size: medium;
+        line-height: 1.6;
+      }
+
+      header {
+        background-color: steelblue;
+        padding: 1em;
+      }
+
+      main {
+        display: grid;
+        grid-template-columns: 5fr 3fr;
+        column-gap: 60px;
+      }
+
+      section h2 {
+        border-bottom-style: ridge;
+        border-bottom-width: thick;
+        border-bottom-color: black;
+        font-weight: bold;
+      }
+
+      h1 {
+        margin-top: 0;
+        margin-bottom: -0.5em;
+      }
+
+      h2 {
+        margin-bottom: -0.25em;
+        color: rgb(0, 26, 255);
+      }
+
+      h3 {
+        margin-bottom: -1em;
+        color: rgba(0, 85, 255, 0.81);
+      }
+
+      h4 {
+        margin-bottom: -0.75em;
+      }
+
+      a {
+        color: inherit;
+        text-decoration: none;
+      }
+
+      a:hover {
+        color: rgb(0, 26, 255);
+        text-decoration: underline;
+      }
+
+      .content {
+        display: flex;
+      }
+
+      .experience ul {
+        padding: 0;
+        margin-left: 1em;
+      }
+
+      .contact ul {
+        list-style: none;
+        padding: 0;
+        line-height: 1.4;
+      }
+
+      .container {
+        margin: 0;
+        padding: 0;
+        width: 960px;
+        padding: 20px;
+      }
+
+      .skills ul {
+        list-style: none;
+        padding: 0;
+      }
+
+      .skills li {
+        float: left;
+        background: rgba(0, 85, 255, 0.81);
+        color: white;
+        padding: 6px 8px;
+        border-radius: 5px;
+        margin: 4px 2px;
+        font-size: 14px;
+      }
+
+      .experience .job + .job {
+        border-top-style: dashed;
+        border-top-width: medium;
+        border-top-color: lightgray;
+      }
+
+      .company-date-location {
+        font-style: italic;
+        display: grid;
+        grid-template-columns: 1.5fr 13fr 1.5fr 13fr 1fr 14fr;
+      }
+
+      .date-location {
+        font-style: italic;
+        display: grid;
+        grid-template-columns: 1fr 7fr 1fr 10fr;
+      }
+
+      .sidebar {
+        background-color: aliceblue;
+        padding: 1em;
+        padding-top: 0;
+      }
+
+      .fas {
+        line-height: inherit !important;
+        vertical-align: middle;
+      }
+    </style>
   </head>
 
   <body>
     <div class="container">
       <header>
         <h1>João Barbosa Neto</h1>
-        <p>
-          Experienced Software Engineer specializing in industrial automation,
-          IoT systems, and scalable software development.
-        </p>
       </header>
-
-      <div class="content">
-        <main class="experience">
-          <section class="section">
+      <main>
+        <article>
+          <section class="summary">
+            <h2>Summary</h2>
+            <p>
+              Software engineer with 10+ years experience in designing and
+              implementing software solutions.
+            </p>
+          </section>
+          <section class="experience">
             <h2>Experience</h2>
-
-            <div class="job">
-              <h3>Software Engineer - Kepware Technologies (PTC)</h3>
-              <p>
-                <strong>Portland, ME | 2015 – Present</strong>
+            <section class="job">
+              <h3>Software Development Engineer II</h3>
+              <p class="company-date-location">
+                <i class="fas fa-building"></i>
+                <b>Microsoft</b>
+                <i class="fas fa-calendar"></i>
+                01/2022 – Present
+                <i class="fas fa-map-marker-alt"></i>
+                Remote
+              </p>
+              <ul>
+                <li>Xbox Server team supporting game streaming.</li>
+                <li>
+                  Implemented an automated testing solution for Playfab Unity
+                  API plugin.
+                </li>
+                <li>
+                  Participated in on-call rotations for investigating,
+                  assessing, and mitigating live site issues affecting game
+                  streaming servers.
+                </li>
+              </ul>
+            </section>
+            <section class="job">
+              <h3>Software Engineer</h3>
+              <p class="company-date-location">
+                <i class="fas fa-building"></i>
+                <b>PTC (Kepware)</b>
+                <i class="fas fa-calendar"></i>
+                10/2015 – 12/2021
+                <i class="fas fa-map-marker-alt"></i>
+                Portland, ME
               </p>
               <ul>
                 <li>
-                  Provided support and troubleshooting to end users of
-                  KEPServerEX and ClientAce.
+                  Provided technical support and troubleshooting for end users
+                  of KEPServerEX, its communication drivers, and ClientAce.
                 </li>
                 <li>
-                  Developed patches containing bug fixes and enhancements for
-                  KEPServerEX and its drivers in C++.
+                  Debugged communications and memory issues with tools such as
+                  Wireshark, WinDbg, DebugDiag, and DebugView.
                 </li>
                 <li>
-                  Designed and developed a communications driver for injection
-                  molding machines that support the EUROMAP 63 protocol.
+                  Implemented C++ patches with bug fixes and enhancements for
+                  KEPServerEX and its communication drivers.
                 </li>
                 <li>
-                  Spearheaded the design, development, and testing of an OPC UA
-                  Gateway that extends functionality of KEPServerEX’s current
-                  OPC UA product offerings.
+                  Developed a proprietary packet dissector used for assisting
+                  technical support with troubleshooting communications between
+                  KEPServerEX drivers and PLC devices.
+                </li>
+                <li>
+                  Designed and developed a file-based communication driver for
+                  KEPServerEX that enables communication with injection molding
+                  machines that support EUROMAP 63.
+                </li>
+                <li>
+                  Researched and developed new features related to security and
+                  type system for KEPServerEX’s OPC UA Server and OPC UA Client
+                  products.
+                </li>
+                <li>
+                  Used static analysis tools such as Veracode to identify,
+                  assess, and fix vulnerabilities.
+                </li>
+                <li>
+                  Led the design, development, and testing of an OPC UA Gateway
+                  application with 80% automated test coverage.
                 </li>
               </ul>
-            </div>
-
-            <div class="job">
-              <h3>Web Developer - Woodard & Curran</h3>
-              <p><strong>Portland, ME | 2015</strong></p>
+            </section>
+            <section class="job">
+              <h3>Web Developer</h3>
+              <p class="company-date-location">
+                <i class="fas fa-building"></i>
+                <b>Woodard & Curran</b>
+                <i class="fas fa-calendar"></i>
+                06/2015 - 10/2015
+                <i class="fas fa-map-marker-alt"></i>
+                Portland, ME
+              </p>
               <ul>
                 <li>
                   Maintained and improved internal tools, SharePoint modules,
@@ -62,71 +234,79 @@
                   engineers.
                 </li>
                 <li>
-                  Developed compliance tracking tools using C# with DevExpress
-                  and Entity Framework.
+                  Developed environmental, health, and safety compliance
+                  tracking tools using C# with DevExpress and Entity Framework.
+                  Used TFS as a tool for collaboration and version control.
                 </li>
               </ul>
-            </div>
+            </section>
           </section>
-        </main>
+        </article>
 
         <aside class="sidebar">
-          <section class="contact-info">
+          <section class="contact">
             <h2>Contact</h2>
-            <p>
-              <i class="fas fa-map-marker-alt"></i>
-              South Portland, ME
-            </p>
-            <p>
-              <i class="fas fa-phone"></i>
-              (207) 577-5802
-            </p>
-            <p>
-              <i class="fas fa-envelope"></i>
-              <a href="mailto:jdmbarbosaneto@gmail.com">Email Me</a>
-            </p>
-            <p>
-              <i class="fab fa-linkedin"></i>
-              <a href="#">LinkedIn</a>
-            </p>
-            <p>
-              <i class="fab fa-github"></i>
-              <a href="#">GitHub</a>
-            </p>
+            <ul>
+              <li>
+                <a href="tel:2075775802">
+                  <i class="fas fa-phone"></i>
+                  (207) 577-5802
+                </a>
+              </li>
+              <li>
+                <a href="mailto:jdmbarbosaneto@gmail.com">
+                  <i class="fas fa-envelope"></i>
+                  jdmbarbosaneto@gmail.com
+                </a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com/in/jdmbarbosaneto/">
+                  <i class="fab fa-linkedin"></i>
+                  linkedin.com/in/jbne
+                </a>
+              </li>
+              <li>
+                <a href="https://www.jbne.github.io">
+                  <i class="fab fa-github"></i>
+                  jbne.github.io
+                </a>
+              </li>
+            </ul>
           </section>
-
-          <section class="skills">
-            <h2>Skills</h2>
-            <div class="skill-category">
-              <h3>Programming</h3>
-              <span class="skill">C++</span>
-              <span class="skill">C#</span>
-              <span class="skill">Python</span>
-              <span class="skill">Java</span>
-            </div>
-            <div class="skill-category">
-              <h3>Tools & DevOps</h3>
-              <span class="skill">Docker</span>
-              <span class="skill">Git</span>
-              <span class="skill">Jenkins</span>
-              <span class="skill">SQL Server</span>
-            </div>
-            <div class="skill-category">
-              <h3>Networking & Security</h3>
-              <span class="skill">Wireshark</span>
-              <span class="skill">WinDbg</span>
-              <span class="skill">SSL/TLS</span>
-              <span class="skill">REST API</span>
-            </div>
-          </section>
-
           <section class="education">
             <h2>Education</h2>
-            <p><strong>B.S. in Computer Science</strong></p>
-            <p>University of Southern Maine</p>
+            <h3>Bachelor of Science, Computer Science</h3>
+            <h4>University of Southern Maine</h4>
+            <p class="date-location">
+              <i class="fas fa-calendar"></i>
+              2015 – 2021
+              <i class="fas fa-map-marker-alt"></i>
+              Portland, ME
+            </p>
+          </section>
+          <section class="skills">
+            <h2>Skills</h2>
+            <ul>
+              <li>C</li>
+              <li>C++</li>
+              <li>C#</li>
+              <li>.NET</li>
+              <li>Python</li>
+              <li>Java</li>
+              <li>Powershell</li>
+              <li>Bash</li>
+              <li>Git</li>
+              <li>WinDbg</li>
+              <li>Docker</li>
+              <li>Packer</li>
+              <li>Wireshark</li>
+              <li>Protobuf</li>
+              <li>gRPC</li>
+              <li>Azure</li>
+            </ul>
           </section>
         </aside>
-      </div>
+      </main>
     </div>
   </body>
 </html>
