--- a/index.html
+++ b/index.html
@@ -15,11 +15,6 @@
         line-height: 1.6;
       }
 
-      header {
-        background-color: steelblue;
-        padding: 1em;
-      }
-
       main {
         display: grid;
         grid-template-columns: 5fr 3fr;
@@ -33,22 +28,27 @@
         font-weight: bold;
       }
 
-      h1 {
+      header h1 {
         margin-top: 0;
         margin-bottom: -0.5em;
       }
 
-      h2 {
+      header h2 {
+        margin-top: 0;
+        margin-bottom: -0.5em;
+      }
+
+      section h2 {
         margin-bottom: -0.25em;
         color: rgb(0, 26, 255);
       }
 
-      h3 {
+      section h3 {
         margin-bottom: -1em;
         color: rgba(0, 85, 255, 0.81);
       }
 
-      h4 {
+      section h4 {
         margin-bottom: -0.75em;
       }
 
@@ -134,6 +134,7 @@
     <div class="container">
       <header>
         <h1>João Barbosa Neto</h1>
+        <h2>Software Engineer</h2>
       </header>
       <main>
         <article>
@@ -141,7 +142,8 @@
             <h2>Summary</h2>
             <p>
               Software engineer with 10+ years experience in designing and
-              implementing software solutions.
+              implementing software solutions. Strong background in industrial
+              automation, IoT, distributed systems,
             </p>
           </section>
           <section class="experience">
@@ -150,27 +152,46 @@
               <h3>Software Development Engineer II</h3>
               <p class="company-date-location">
                 <i class="fas fa-building"></i>
-                <b>Microsoft</b>
+                <b>Microsoft (Xbox)</b>
                 <i class="fas fa-calendar"></i>
                 01/2022 – Present
                 <i class="fas fa-map-marker-alt"></i>
                 Remote
               </p>
               <ul>
-                <li>Xbox Server team supporting game streaming.</li>
                 <li>
-                  Implemented an automated testing solution for Playfab Unity
-                  API plugin.
+                  Developed and deployed an automated testing solution,
+                  leveraging specialized data center servers during off-peak
+                  hours for Kubernetes orchestrated workloads. This optimization
+                  reduced test dependencies and enhanced reliability across
+                  testing environments.
                 </li>
                 <li>
-                  Participated in on-call rotations for investigating,
-                  assessing, and mitigating live site issues affecting game
-                  streaming servers.
+                  Designed and implemented a client/server automated testing
+                  framework for a previously untested Playfab Unity API plugin,
+                  enabling cross-platform device orchestration and expanding
+                  test coverage.
+                </li>
+                <li>
+                  Led research and implementation of Packer to replace a virtual
+                  machine image build process, enhancing observability,
+                  robustness, and efficiency, achieving a 40% improvement in
+                  image build execution time.
+                </li>
+                <li>
+                  Resolved critical bugs related to game streaming server
+                  provisioning, roaming user data, and cloud saves, improving
+                  stability and user experience.
+                </li>
+                <li>
+                  Provided on-call support, diagnosing, assessing, and
+                  mitigating live site issues impacting game streaming servers,
+                  ensuring service reliability.
                 </li>
               </ul>
             </section>
             <section class="job">
-              <h3>Software Engineer</h3>
+              <h3>Software Engineer Specialist</h3>
               <p class="company-date-location">
                 <i class="fas fa-building"></i>
                 <b>PTC (Kepware)</b>
